// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow FlexRow component should render 1`] = `
<div
  className="sc-AxirZ mJzil"
>
  Test
</div>
`;

exports[`FlexRow FlexRow component should render row-reverse 1`] = `
<div
  className="sc-AxirZ dHTfXY"
>
  Test
</div>
`;
